--- a/src/app/usit/components/masters/companies-list/companies-list.component.scss
+++ b/src/app/usit/components/masters/companies-list/companies-list.component.scss
@@ -1,12 +1,13 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 86vh;
+  height: calc(100vh - 90px);
 }
 
 .table-wrapper {
+  flex: 1;
   overflow: auto;
-  padding: 4px;
+  // padding:  0px 4px 4px 4px;
 }
 
 table {
