--- a/src/app/taskmodule/task-list/task-list.component.scss
+++ b/src/app/taskmodule/task-list/task-list.component.scss
@@ -1,7 +1,7 @@
 .submission-container {
     display: flex;
     flex-direction: column;
-    height: 86vh;
+    height: calc(100vh - 90px);
   }
   
   ul {
@@ -123,9 +123,9 @@
   }
   
   .interview-table-style {
-    padding: 0 2px;
+    // padding: 0 2px;
     width: 100%;
-    max-height: calc(100% - 3px);
+    // max-height: calc(100% - 3px);
     overflow: auto;
     display: block;
   }
@@ -200,13 +200,13 @@
     column-gap: 5px;
   }
   
-  @media screen and (min-width: 1500px) {
-    .interview-table-style {
-      width: 100%;
-      height: calc(100% - 8px);
-      overflow: auto;
-    }
-  }
+  // @media screen and (min-width: 1500px) {
+  //   .interview-table-style {
+  //     width: 100%;
+  //     height: calc(100% - 8px);
+  //     overflow: auto;
+  //   }
+  // }
   
   .recruiting-companies {
     color: #f44336;
