--- a/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.scss
+++ b/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.scss
@@ -1,7 +1,7 @@
 .future-opt-cpt-container {
     display: flex;
     flex-direction: column;
-    height: 86vh;
+    height: calc(100vh - 90px);
   }
   
   ul {
@@ -125,9 +125,9 @@
   }
   
   .future-opt-cpt-table-style {
-    padding: 0 2px;
+    // padding: 0 2px;
     width: 100%;
-    max-height: calc(100% - 3px);
+    // max-height: calc(100% - 3px);
     overflow: auto;
     display: block;
   }
