--- a/src/app/usit/components/accounts&billing/purchase-order-list/purchase-order-list.component.scss
+++ b/src/app/usit/components/accounts&billing/purchase-order-list/purchase-order-list.component.scss
@@ -1,7 +1,7 @@
 .purchase-order-container {
     display: flex;
     flex-direction: column;
-    height: 86vh;
+    height: calc(100vh - 90px);
   }
   
   ul {
@@ -140,9 +140,9 @@
   }
   
   .purchase-order-table-style {
-    padding: 0 2px;
+    // padding: 0 2px;
     width: max-content;
-    max-height: calc(100% - 2px);
+    // max-height: calc(100% - 2px);
     overflow: auto;
     display: block;
   }
@@ -217,13 +217,13 @@
     column-gap: 5px;
   }
   
-  @media screen and (min-width: 1400px) {
-    .vendor-table-style {
-      width: 100%;
-      height: calc(100% - 0px);
-      overflow: auto;
-    }
-  }
+  // @media screen and (min-width: 1400px) {
+  //   .vendor-table-style {
+  //     width: 100%;
+  //     height: calc(100% - 0px);
+  //     overflow: auto;
+  //   }
+  // }
   
   .recruiting-companies {
     color: #f44336;
