--- a/src/app/usit/components/employee-list/employee-list.component.html
+++ b/src/app/usit/components/employee-list/employee-list.component.html
@@ -131,13 +131,15 @@
       <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
     </section>
     <hr>
+  </div>
+
+  <div class="paginator">
     <!-- paginator -->
     <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
       [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
       [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
       [pageIndex]="pageIndex" aria-label="Select page">
     </mat-paginator>
-
   </div>
 
 </div>
