--- a/src/app/usit/components/employee-list/employee-list.component.scss
+++ b/src/app/usit/components/employee-list/employee-list.component.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 86vh;
+  height: calc(100vh - 90px);
 }
 
 ul{
@@ -142,8 +142,8 @@ td:nth-child(2) {
 .table-style {
   width: 100%;
   // max-height: 61vh;
-  max-height: calc(100% - 52px);
-  padding: 0 2px;
+  // max-height: calc(100% - 52px);
+  // padding: 0 2px;
   overflow: auto;
   display: block;
 }
@@ -189,11 +189,11 @@ td:nth-child(2) {
     padding: 0px 2px;
   }
 
-  .container {
-    display: flex;
-    flex-direction: column;
-    height: 82vh;
-  }
+  // .container {
+  //   display: flex;
+  //   flex-direction: column;
+  //   height: 82vh;
+  // }
 }
 
 .action-buttons {
@@ -235,16 +235,16 @@ ul.breadcrumb li:last-child {
   pointer-events: none;
 }
 
-@media screen and (min-width: 1440px) {
-  .table-style {
-    width: 100%;
-    height: calc(100% - 0px);
-    overflow: auto;
-  }
-}
+// @media screen and (min-width: 1440px) {
+//   .table-style {
+//     width: 100%;
+//     height: calc(100% - 0px);
+//     overflow: auto;
+//   }
+// }
 
-@media screen and (min-width: 1920px) {
-  .container {
-    height: 90vh;
-  }
-}
+// @media screen and (min-width: 1920px) {
+//   .container {
+//     height: 90vh;
+//   }
+// }
