--- a/src/app/usit/components/quiz/quiz-result/quiz-result.component.scss
+++ b/src/app/usit/components/quiz/quiz-result/quiz-result.component.scss
@@ -1,13 +1,12 @@
 .container {
-  // display: flex;
-  // flex-direction: column;
-  height: 86vh;
-  overflow: hidden !important;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 90px);
 }
 
 .table-wrapper {
   flex: 1;
-  overflow: hidden;
+  overflow: auto;
   padding: 0 4px 4px 4px;
 }
 
