--- a/src/app/usit/components/recruitment/requirement-list/requirement-list.component.scss
+++ b/src/app/usit/components/recruitment/requirement-list/requirement-list.component.scss
@@ -1,7 +1,7 @@
 .requirement-container {
   display: flex;
   flex-direction: column;
-  height: 86vh;
+  height: calc(100vh - 90px);
 }
 
 ul {
@@ -135,10 +135,10 @@ tbody {
 }
 
 .requirement-table-style {
-  padding: 0 2px;
+  // padding: 0 2px;
  // width: max-content;
  width: 100%;
-  max-height: calc(100% - 2px);
+  // max-height: calc(100% - 2px);
   overflow: auto;
   display: block;
 }
@@ -221,13 +221,13 @@ tbody {
   column-gap: 5px;
 }
 
-@media screen and (min-width: 1500px) {
-  .requirement-table-style {
-    width: 100%;
-    height: calc(100% - 4px);
-    overflow: auto;
-  }
-}
+// @media screen and (min-width: 1500px) {
+//   .requirement-table-style {
+//     width: 100%;
+//     height: calc(100% - 4px);
+//     overflow: auto;
+//   }
+// }
 
 .recruiting-companies {
   color: #f44336;
