--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 86vh;
+  height: calc(100vh - 90px);
 }
 
 ul {
@@ -175,7 +175,7 @@ tbody {
   padding: 0 2px;
   // width: max-content;
   width: 100%;
-  max-height: calc(100% - 2px);
+  // max-height: calc(100% - 2px);
   overflow: auto;
   display: block;
 }
@@ -252,13 +252,13 @@ tbody {
   column-gap: 5px;
 }
 
-@media screen and (min-width: 1400px) {
-  .vendor-table-style {
-    width: 100%;
-    height: calc(100% - 8px);
-    overflow: auto;
-  }
-}
+// @media screen and (min-width: 1400px) {
+//   .vendor-table-style {
+//     width: 100%;
+//     height: calc(100% - 8px);
+//     overflow: auto;
+//   }
+// }
 
 .recruiting-companies {
   color: #f44336;
@@ -312,8 +312,8 @@ ul.breadcrumb li:last-child {
   color: #4154f1;
 }
 
-@media screen and (min-width: 1920px) {
-  .container {
-    height: 90vh;
-  }
-}
+// @media screen and (min-width: 1920px) {
+//   .container {
+//     height: 90vh;
+//   }
+// }
