h1 & future opt cpt pagination, openreqs changes

--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -12,14 +12,14 @@
                 <mat-label>Select a Portal</mat-label>
                 <mat-select (selectionChange)="onSelectionChange($event)">
                     <mat-option value="all">All</mat-option>
-                    <mat-option value="adzuna">Adzuna</mat-option>
+                    <!-- <mat-option value="adzuna">Adzuna</mat-option> -->
                     <mat-option value="dice">Dice</mat-option>
                     <mat-option value="indeed">Indeed</mat-option>
-                    <mat-option value="jobcube">Job Cube</mat-option>
+                    <!-- <mat-option value="jobcube">Job Cube</mat-option> -->
                     <!-- <mat-option value="joblift">Job Lift</mat-option> -->
-                    <mat-option value="juju">Juju</mat-option>
+                    <!-- <mat-option value="juju">Juju</mat-option> -->
                     <mat-option value="linkedin">LinkedIn</mat-option>
-                    <mat-option value="post job free">Post Job Free</mat-option>
+                    <!-- <mat-option value="post job free">Post Job Free</mat-option> -->
                     <mat-option value="recruit.net">Recruit</mat-option>
                     <mat-option value="Simplyhired">Simply Hired</mat-option>
                     <!-- <mat-option value="snaprecruit">Snaprecruit</mat-option> -->
