--- a/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
+++ b/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
@@ -117,13 +117,9 @@
 
     <div class="paginator">
         <!-- paginator -->
-        <!-- <mat-paginator   (page)="handlePageEvent($event)"
-              [length]="totalItems" [pageSize]="pageSize"
-              [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
-              [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-              [hidePageSize]="true"
-              [pageIndex]="currentPageIndex" aria-label="Select page">
-            </mat-paginator> -->
+        <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+        </mat-paginator>
     </div>
-
 </div>
