--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
@@ -103,13 +103,11 @@
 
     <div class="paginator">
         <!-- paginator -->
-        <!-- <mat-paginator   (page)="handlePageEvent($event)"
-          [length]="totalItems" [pageSize]="pageSize"
-          [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
-          [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-          [hidePageSize]="true"
-          [pageIndex]="currentPageIndex" aria-label="Select page">
-        </mat-paginator> -->
-      </div>
+        <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
+            [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
+            [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
+            [pageIndex]="pageIndex" aria-label="Select page">
+        </mat-paginator>
+    </div>
 
 </div>
