--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
@@ -35,7 +35,7 @@
                 <!-- Name Column-->
                 <ng-container matColumnDef="Name">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"> Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.employeename}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element?.employeename|titlecase}} </td>
                 </ng-container>
 
                 <!-- Company Column-->
