--- a/src/app/usit/components/employee-list/employee-list.component.html
+++ b/src/app/usit/components/employee-list/employee-list.component.html
@@ -40,11 +40,11 @@
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Name"> Name </th>
           <td mat-cell *matCellDef="let element">
             <span class="user-info" (click)="goToUserInfo(element.userid)">
-              {{element.fullname}}
+              {{element.fullname|titlecase}}
             </span>
             <ng-container *ngIf="element.locked; then updateStatTemplate else elseTemplate"></ng-container>
             <ng-template #updateStatTemplate>
-              <span [style.cursor]="'pointer'" style="display: flex; flex-direction: row; align-items: center; gap: 2px;" >{{element.pseudoname}}
+              <span [style.cursor]="'pointer'" style="display: flex; flex-direction: row; align-items: center; gap: 2px;" >{{element.pseudoname|titlecase}}
                 <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button (click)="unlock(element)"
                   style="width: 65px; height: 15px;font-weight: bolder;background-color: orange;" [ngStyle]="{ color: 'white' }" >
                  <span style="font-weight: bolder;">LOCKED</span> 
