--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -42,16 +42,16 @@
 
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 1%">
                         S.No </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.serialNum}}</td>
+                    <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
                 </ng-container>
 
                 <!-- Name Column-->
                 <ng-container matColumnDef="posted_on">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"
-                        style="width: 7%">Posted On</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{element?.posted_on |
+                        style="width: 2%">Posted On</th>
+                    <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> {{element?.posted_on |
                         date:'MM-dd-yyyy HH:mm'  }} </td>
                 </ng-container>
 
@@ -60,46 +60,46 @@
                 <!-- Technology Column-->
                 <ng-container matColumnDef="job_title">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology"
-                        style="width: 15%">
+                        style="width: 20%">
                         Title </th>
                     <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
                                 href="{{element?.job_source}}" target="_blank"
-                                (click)="empTag(element.id)">{{element?.job_title}}</a>
+                                (click)="empTag(element.id)">{{element?.job_title|titlecase}}</a>
                         </span> </td>
                 </ng-container>
 
                 <!-- Visa Column-->
                 <ng-container matColumnDef="category_skill">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Visa">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Visa" style="width: 13%">
                         Category </th>
-                    <td mat-cell *matCellDef="let element">
-                        {{element?.category_skill}} </td>
+                    <td mat-cell *matCellDef="let element"style="width: 13%">
+                        {{ element?.category_skill | titlecase }} </td>
                 </ng-container>
 
                 <!-- Experience Column-->
                 <ng-container matColumnDef="employment_type">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"> Emp Type </th>
-                    <td mat-cell *matCellDef="let element">{{element?.employment_type}} </td>
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"style="width: 3%"> Emp Type </th>
+                    <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="job_location">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"> Location </th>
-                    <td mat-cell *matCellDef="let element">{{element?.job_location}} </td>
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"style="width: 10%"> Location </th>
+                    <td mat-cell *matCellDef="let element"style="width: 10%">{{element?.job_location | titlecase}} </td>
                 </ng-container>
 
                 <!-- Rate Column-->
                 <ng-container matColumnDef="vendor">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Rate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Rate"style="width: 12%">
                         Vendor</th>
-                        <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 5%"> {{element?.vendor}}
+                        <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 12%"> {{element?.vendor | titlecase}}
                         </td>
                 </ng-container>
 
                 <!-- Source Column-->
                 <ng-container matColumnDef="source">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Source"
-                        style="width: 7%">Source</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{ element?.source }} </td>
+                        style="width: 3%">Source</th>
+                    <td mat-cell *matCellDef="let element" nowrap style="width: 3%"> {{ element?.source | titlecase}} </td>
                 </ng-container>
 
                 <!-- Priority Column-->
