--- a/src/app/usit/components/sales/interview-list/interview-list.component.html
+++ b/src/app/usit/components/sales/interview-list/interview-list.component.html
@@ -43,7 +43,7 @@
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ConsultantName" mat-sort-header> Consultant Name </th>
                     <td mat-cell *matCellDef="let element">
                         <span class="consultant-id"
-                        (click)="goToConsultantInfo(element, flag)">{{element?.name}}
+                        (click)="goToConsultantInfo(element, flag)">{{element?.name|titlecase}}
                       </span>
                     
                     </td>
