--- a/src/app/usit/components/technology-tag-list/technology-tag-list.component.html
+++ b/src/app/usit/components/technology-tag-list/technology-tag-list.component.html
@@ -38,7 +38,7 @@
         <ng-container matColumnDef="Technology">
           <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology" style="width: 20%"> Technology
           </th>
-          <td mat-cell *matCellDef="let element" style="width: 20%"> {{ element.technologyarea }} </td>
+          <td mat-cell *matCellDef="let element" style="width: 20%"> {{ element.technologyarea|titlecase }} </td>
         </ng-container>
         <!-- Technology Column-->
         <ng-container matColumnDef="Skills">
