--- a/src/app/usit/components/reports/sourcing-reports/sourcing-reports.component.scss
+++ b/src/app/usit/components/reports/sourcing-reports/sourcing-reports.component.scss
@@ -176,7 +176,7 @@ form {
     ul{
       padding-inline-start: 10px;
       background-color: rgb(228, 231, 234);
-      height: 2rem;
-      padding-top: 8PX;
+      // height: 2rem;
+      padding-top: 2px;
       top: 0;
     }
