--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,6 +3,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 3px;
+  // padding: 3px;
   background-color: whitesmoke;
 }
