--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -6,7 +6,10 @@
     (click)="sidenav.toggle()" >
       <mat-icon [@rotate]="sidenav.opened ? 'close' : 'menu'">{{sidenav.opened ? 'close' : 'menu'}}</mat-icon>
     </button>
-    <img src="assets/images/singular-logo.png" alt="logo" width="150" height="150" loading="lazy">
+    <!-- <img src="assets/images/singular-logo.png" alt="logo" width="150" height="150" loading="lazy"> -->
+    <a routerLink="/usit/dashboard" style="height: inherit;">
+      <img src="assets/images/singular-logo.png" alt="logo" loading="lazy">
+    </a>
     <span class="button-divider"></span>
     <!-- <button mat-icon-button class="login-icon" aria-label="login-icon" (click)="login()">
       <mat-icon>login</mat-icon>
