--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -8,7 +8,7 @@
 
 img {
   max-width: fit-content;
-  height: auto;
+  height: inherit;
 }
 
 .sidebar-container {
@@ -20,7 +20,7 @@ img {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
   // background-color: rgb(223, 222, 222) !important;
-  height: calc(100vh - 90px);
+  height: calc(100vh - 68px);
   background: #eee;
 }
 
@@ -32,7 +32,7 @@ img {
 }
 
 .router-container {
-  height: calc(100vh - 90px);
+  height: calc(100vh - 68px);
   background-color: white;
   overflow-y: hidden;
 }
@@ -75,3 +75,6 @@ img {
 //     width: 180px;
 //   }
 // }
+.tool-bar-container {
+  height: 48px;
+}
