--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.scss
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.scss
@@ -1,14 +1,14 @@
 .h1b-container {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 90px);
+    height: calc(100vh - 68px);
   }
   
   ul {
     padding-inline-start: 10px;
     background-color: rgb(228, 231, 234);
-    height: 2rem;
-    padding-top: 8PX;
+    // height: 2rem;
+    padding-top: 2px;
     top: 0;
   }
   
