--- a/src/app/usit/components/emailextraction/emailextraction.component.scss
+++ b/src/app/usit/components/emailextraction/emailextraction.component.scss
@@ -119,8 +119,8 @@
   ul {
     padding-inline-start: 10px;
     background-color: rgb(228, 231, 234);
-    height: 2rem;
-    padding-top: 8px;
+    // height: 2rem;
+    padding-top: 2px;
     top: 0;
   }
   
