--- a/src/app/usit/components/reports/open-requirements-reports/open-requirements-reports.component.scss
+++ b/src/app/usit/components/reports/open-requirements-reports/open-requirements-reports.component.scss
@@ -7,8 +7,8 @@
   ul{
     padding-inline-start: 10px;
     background-color: rgb(228, 231, 234);
-    height: 2rem;
-    padding-top: 8PX;
+    // height: 2rem;
+    padding-top: 2px;
     top: 0;
   }
   .badge{
